--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<OutputType>Exe</OutputType>
+		<OutputType>Library</OutputType>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<PackageId>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageId>
-		<Version>1.0.3</Version>
+		<Version>1.0.0</Version>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
 		<Description>This package allows you to retrieve public holiday events from Google Public Calendars for Azerbaijan.</Description>
