--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -7,11 +7,11 @@
 		<Nullable>enable</Nullable>
 
 		<PackageId>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageId>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
 		<Description>This package allows you to retrieve public holiday events from Google Public Calendars for Azerbaijan.</Description>
-		<PackageTags>google calendar holidays events dotnet azerbaijan azerbaycan azirbaycan  bayram tetil tatil</PackageTags>
+		<PackageTags>google calendar holidays events dotnet azerbaijan azerbaycan azerbaycan tətil bayram tetil tatil</PackageTags>
 		<RepositoryUrl>https://github.com/elminalirzayev/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/elminalirzayev/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageProjectUrl>
