--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,13 +12,17 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        framework: [ 'net8.0', 'net7.0', 'net6.0', 'netstandard2.0', 'netstandard2.1', 'net48', 'net47' ]
+        framework: [ 'net9.0', 'net8.0', 'net7.0', 'net6.0', 'netstandard2.1', 'net48', 'net47' ]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x' 
+        dotnet-version: |
+          9.0.x
+          8.0.x
+          7.0.x
+          6.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
