--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -2,8 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<!--<TargetFrameworks>net8.0</TargetFrameworks>-->
-		<TargetFrameworks>net9.0;net8.0;net7.0;net6.0;net48;net47;netstandard2.1;</TargetFrameworks>
+		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;net48;net47;netstandard2.0;</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
@@ -24,7 +23,7 @@
 		<AssemblyTitle>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyTitle>
 		<AssemblyName>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyName>
 		<PackageId>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageId>
-		<Version>1.0.11</Version>
+		<Version>1.0.12</Version>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
 		<Copyright>Copyright © Elmin Alirzayev 2025</Copyright>
@@ -56,7 +55,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Easy.Tools.GoogleCalendarEvents" Version="1.0.11" />
+		<PackageReference Include="Easy.Tools.GoogleCalendarEvents" Version="1.0.12" />
 	</ItemGroup>
 
 </Project>
