--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -23,7 +23,8 @@
 		<AssemblyTitle>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyTitle>
 		<AssemblyName>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyName>
 		<PackageId>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageId>
-		<Version>1.0.12</Version>
+		<Version>1.0.13</Version>
+		<PackageIcon>icon.png</PackageIcon>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
 		<Copyright>Copyright © Elmin Alirzayev 2025</Copyright>
@@ -37,18 +38,22 @@
 		<PackageReleaseNotes>-</PackageReleaseNotes>
 
 		<!-- Build -->
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
-		<LangVersion>10.0</LangVersion>
+		<LangVersion>latest</LangVersion>
 
 
 	</PropertyGroup>
 
 	<ItemGroup>
 		<None Include="README.md">
+			<Pack>true</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="icon.png">
 			<Pack>true</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
