--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -2,9 +2,11 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;net48;net47;netstandard2.0;</TargetFrameworks>
+		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;netstandard2.1;netstandard2.0;net48;net472</TargetFrameworks>
+
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<LangVersion>latest</LangVersion>
 
 		<!-- Deterministic + SourceLink -->
 		<Deterministic>true</Deterministic>
@@ -48,8 +50,6 @@
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
-		<LangVersion>latest</LangVersion>
-
 
 	</PropertyGroup>
 
