--- a/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
+++ b/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;netstandard2.1;netstandard2.0;net48;net472</TargetFrameworks>
+		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;netstandard2.1;netstandard2.0;net48;net47;net472</TargetFrameworks>
 
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -25,7 +25,7 @@
 		<AssemblyTitle>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyTitle>
 		<AssemblyName>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</AssemblyName>
 		<PackageId>Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageId>
-		<Version>1.1.0</Version>
+		<Version>1.1.1</Version>
 		<PackageIcon>icon.png</PackageIcon>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
@@ -37,12 +37,7 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/elminalirzayev/Easy.Tools.GoogleCalendarEvents.Holidays.Azerbaijan</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageReleaseNotes>
-			New Features:
-			- Multi-language support (Azerbaijani &amp; English).
-			- Renamed service to 'AzerbaijanHolidaysService' for better clarity.
-			- Full backward compatibility with legacy 'HolidayService'.
-		</PackageReleaseNotes>
+		<PackageReleaseNotes> - </PackageReleaseNotes>
 
 		<!-- Build -->
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -66,7 +61,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Easy.Tools.GoogleCalendarEvents" Version="1.0.14" />
+		<PackageReference Include="Easy.Tools.GoogleCalendarEvents" Version="1.0.15" />
 	</ItemGroup>
 
 </Project>
